--- a/.github/workflows/sync-file.yml
+++ b/.github/workflows/sync-file.yml
@@ -1,1 +1,20 @@
+name: Sync File
+
+on:
+  schedule:
+    - cron: '0 0 * * *' # 每天运行一次（你可以根据需要调整这个时间）
+  workflow_dispatch: # 手动触发
+
+jobs:
+  sync:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sync file
+        uses: repo-sync/github-sync-action@v2
+        with:
+          source_repo: fanmingming/live
+          source_file_path: live/tv/m3u/ipv6.m3u
+          destination_file_path: raytv/ipv6.m3u
+          destination_branch: main
+          github_token: ${{ secrets.GITHUB_TOKEN }}
 
