--- a/.github/workflows/sync-file.yml
+++ b/.github/workflows/sync-file.yml
@@ -13,8 +13,8 @@ jobs:
         uses: repo-sync/github-sync-action@v2
         with:
           source_repo: fanmingming/live
-          source_file_path: live/tv/m3u/ipv6.m3u
-          destination_file_path: raytv/ipv6.m3u
+          source_file_path: tv/m3u/ipv6.m3u
+          destination_file_path: ipv6.m3u
           destination_branch: main
           github_token: ${{ secrets.GITHUB_TOKEN }}
 
